k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "go-web-app.a.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-web-app
            port:
              number: 80
